# kplanes_nerfstudio

./: .gitignore  README.md  pyproject.toml
kplanes/: kplanes.py  kplanes_configs.py  kplanes_field.py
